--- a/src/com/github/view/AdminLoginScrn.fxml
+++ b/src/com/github/view/AdminLoginScrn.fxml
@@ -136,12 +136,12 @@
                                  <Insets top="20.0" />
                               </VBox.margin>
                            </TextField>
-                           <Button fx:id="editButton" mnemonicParsing="false" onAction="#editButtonPressed" prefWidth="80.0" style="-fx-background-radius: 20;" text="Edit">
+                           <Button fx:id="editButton" mnemonicParsing="false" prefWidth="80.0" style="-fx-background-radius: 20;" text="Edit">
                               <VBox.margin>
                                  <Insets left="280.0" top="5.0" />
                               </VBox.margin>
                            </Button>
-                           <Button fx:id="saveButton" mnemonicParsing="false" onAction="#saveButtonPressed" prefWidth="80.0" style="-fx-background-radius: 20;" text="Save">
+                           <Button fx:id="saveButton" mnemonicParsing="false" prefWidth="80.0" style="-fx-background-radius: 20;" text="Save">
                               <VBox.margin>
                                  <Insets left="280.0" top="3.0" />
                               </VBox.margin>
@@ -154,5 +154,5 @@
          </Tab>
      </tabs>
    </TabPane>
-   <Button id="exitLoginButton" fx:id="signoutButton" layoutX="522.0" layoutY="1.5" mnemonicParsing="false" onAction="#handleExitAppButton" prefHeight="24.0" prefWidth="24.0" />
+   <Button id="exitLoginButton" fx:id="signoutButton" layoutX="522.0" layoutY="1.5" mnemonicParsing="false" prefHeight="24.0" prefWidth="24.0" />
 </AnchorPane>
