--- a/src/com/github/view/BusDriver.fxml
+++ b/src/com/github/view/BusDriver.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" stylesheets="@../../../resources/Style/login.css" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.github.controller.BusDriver">
+<AnchorPane id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" stylesheets="@../../../resources/Style/login.css" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.github.controller.BusDriver">
     <TabPane prefHeight="500.0" prefWidth="550.0" tabClosingPolicy="UNAVAILABLE">
         <tabs>
             <Tab style="-fx-background-radius: 20;" text="Update Time Schedule">
@@ -76,57 +76,57 @@
                             </VBox>
                             <VBox layoutX="143.0" prefHeight="462.0" prefWidth="347.0">
                                 <children>
-                                    <TextField fx:id="userNameTextField" editable="false" style="-fx-background-radius: 20;">
+                                    <TextField fx:id="userNameTextField" disable="true" editable="false" style="-fx-background-radius: 20;">
                                         <VBox.margin>
                                             <Insets top="20.0" />
                                         </VBox.margin>
                                     </TextField>
-                                    <TextField fx:id="firstNameTextField" editable="false" style="-fx-background-radius: 20;">
+                                    <TextField fx:id="firstNameTextField" disable="true" editable="false" style="-fx-background-radius: 20;">
                                         <VBox.margin>
                                             <Insets top="20.0" />
                                         </VBox.margin>
                                     </TextField>
-                                    <TextField fx:id="lastNameTextField" editable="false" style="-fx-background-radius: 20;">
+                                    <TextField fx:id="lastNameTextField" disable="true" editable="false" style="-fx-background-radius: 20;">
                                         <VBox.margin>
                                             <Insets top="20.0" />
                                         </VBox.margin>
                                     </TextField>
-                                    <TextField fx:id="emailTextField" style="-fx-background-radius: 20;">
+                                    <TextField fx:id="emailTextField" disable="true" editable="false" style="-fx-background-radius: 20;">
                                         <VBox.margin>
                                             <Insets top="20.0" />
                                         </VBox.margin>
                                     </TextField>
-                                    <TextField fx:id="phoneNbrTextField" editable="false" style="-fx-background-radius: 20;">
+                                    <TextField fx:id="phoneNbrTextField" disable="true" editable="false" style="-fx-background-radius: 20;">
                                         <VBox.margin>
                                             <Insets top="20.0" />
                                         </VBox.margin>
                                     </TextField>
-                                    <TextField fx:id="roleTextField" editable="false" style="-fx-background-radius: 20;">
+                                    <TextField fx:id="roleTextField" disable="true" editable="false" style="-fx-background-radius: 20;">
                                         <VBox.margin>
                                             <Insets top="20.0" />
                                         </VBox.margin>
                                     </TextField>
-                                    <PasswordField fx:id="newPasswordTextField" style="-fx-background-radius: 20;">
+                                    <PasswordField fx:id="newPasswordTextField" disable="true" editable="false" style="-fx-background-radius: 20;">
                                         <VBox.margin>
                                             <Insets top="20.0" />
                                         </VBox.margin>
                                     </PasswordField>
-                                    <PasswordField fx:id="confirmPasswordTextField" style="-fx-background-radius: 20;">
+                                    <PasswordField fx:id="confirmPasswordTextField" disable="true" editable="false" style="-fx-background-radius: 20;">
                                         <VBox.margin>
                                             <Insets top="20.0" />
                                         </VBox.margin>
                                     </PasswordField>
-                                    <TextField fx:id="createdDateTextField" editable="false" style="-fx-background-radius: 20;">
+                                    <TextField fx:id="createdDateTextField" disable="true" editable="false" style="-fx-background-radius: 20;">
                                         <VBox.margin>
                                             <Insets top="20.0" />
                                         </VBox.margin>
                                     </TextField>
-                                    <Button fx:id="editButton" mnemonicParsing="false" onAction="#editButtonPressed" prefWidth="80.0" style="-fx-background-radius: 20;" text="Edit">
+                                    <Button fx:id="editButton" mnemonicParsing="false" prefWidth="80.0" style="-fx-background-radius: 20;" text="Edit">
                                         <VBox.margin>
                                             <Insets left="280.0" top="5.0" />
                                         </VBox.margin>
                                     </Button>
-                                    <Button fx:id="saveButton" mnemonicParsing="false" onAction="#saveButtonPressed" prefWidth="80.0" style="-fx-background-radius: 20;" text="Save">
+                                    <Button fx:id="saveButton" mnemonicParsing="false" prefWidth="80.0" style="-fx-background-radius: 20;" text="Save">
                                         <VBox.margin>
                                             <Insets left="280.0" top="3.0" />
                                         </VBox.margin>
@@ -139,5 +139,5 @@
             </Tab>
         </tabs>
     </TabPane>
-    <Button id="exitLoginButton" fx:id="signoutButton" layoutX="522.0" layoutY="1.5" mnemonicParsing="false" onAction="#handleExitAppButton" prefHeight="24.0" prefWidth="24.0" />
+    <Button id="exitLoginButton" fx:id="signoutButton" layoutX="522.0" layoutY="1.5" mnemonicParsing="false" prefHeight="24.0" prefWidth="24.0" />
 </AnchorPane>
