--- a/src/com/github/view/BusDriver.fxml
+++ b/src/com/github/view/BusDriver.fxml
@@ -2,10 +2,12 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
@@ -18,7 +20,14 @@
                     <Button mnemonicParsing="false" text="Button" />
                 </content>
                 <content>
-                    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                  <children>
+                     <ComboBox fx:id="delay" layoutX="14.0" layoutY="137.0" prefWidth="150.0" promptText="Chocie" />
+                     <Label layoutX="14.0" layoutY="95.0" text="Delay :" />
+                     <TextArea fx:id="description" layoutX="303.0" layoutY="136.0" prefHeight="200.0" prefWidth="200.0" />
+                     <Label layoutX="303.0" layoutY="95.0" text="Description:" />
+                     <Button layoutX="249.0" layoutY="390.0" mnemonicParsing="false" onAction="#handleDescription" style="-fx-background-radius: 20;" text="Save" />
+                  </children></AnchorPane>
                 </content>
             </Tab>
             <Tab style="-fx-background-radius: 20;" text="View Profile">
