--- a/src/com/github/view/TaxiDriver.fxml
+++ b/src/com/github/view/TaxiDriver.fxml
@@ -2,15 +2,17 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" stylesheets="@../../../resources/Style/login.css" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.github.controller.TaxiDriver">
+<AnchorPane id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" stylesheets="@../../../resources/Style/login.css" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.github.controller.TaxiDriver">
    <TabPane prefHeight="500.0" prefWidth="550.0" tabClosingPolicy="UNAVAILABLE">
      <tabs>
          <Tab style="-fx-background-radius: 20;" text="Update Time Schedule">
@@ -18,7 +20,14 @@
                <Button mnemonicParsing="false" text="Button" />
             </content>
             <content>
-               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                  <children>
+                     <ComboBox fx:id="delay" layoutX="14.0" layoutY="150.0" prefWidth="150.0" promptText="Choice" />
+                     <Label layoutX="14.0" layoutY="103.0" text="Delay:" />
+                     <TextArea fx:id="description" layoutX="312.0" layoutY="150.0" prefHeight="200.0" prefWidth="200.0" />
+                     <Label layoutX="312.0" layoutY="103.0" text="Description:" />
+                     <Button fx:id="handleDescription" layoutX="249.0" layoutY="390.0" mnemonicParsing="false" style="-fx-background-radius: 20;" text="Save" />
+                  </children></AnchorPane>
             </content>
          </Tab>
        <Tab style="-fx-background-radius: 20;" text="View Profile">
