--- a/src/com/github/view/userGUI.fxml
+++ b/src/com/github/view/userGUI.fxml
@@ -1,20 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.VBox?>
 
-<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="440.0" prefWidth="762.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.github.controller.UserGUI_Controller">
+<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="481.0" prefWidth="762.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.github.controller.UserGUI_Controller">
          <children>
-            <TabPane prefHeight="440.0" prefWidth="762.0" tabClosingPolicy="UNAVAILABLE">
+            <TabPane prefHeight="481.0" prefWidth="762.0" tabClosingPolicy="UNAVAILABLE">
               <tabs>
-                <Tab text="View Booking">
+                <Tab style="-fx-background-radius: 20;" text="View Booking">
                   <content>
                     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="411.0" prefWidth="480.0">
                     <children>
@@ -24,7 +27,7 @@
                     </children></AnchorPane>
                   </content>
                 </Tab>
-                <Tab text="new Booking">
+                <Tab style="-fx-background-radius: 20;" text="new Booking">
                   <content>
                     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="333.0" prefWidth="241.0">
                      <children>
@@ -36,7 +39,7 @@
                      </children></AnchorPane>
                   </content>
                 </Tab>
-                  <Tab text="Balance">
+                  <Tab style="-fx-background-radius: 20;" text="Balance">
                      <content>
                         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="411.0" prefWidth="480.0">
                      <children>
@@ -49,7 +52,7 @@
                      </children></AnchorPane>
                      </content>
                   </Tab>
-                  <Tab text="Complain">
+                  <Tab style="-fx-background-radius: 20;" text="Complain">
                      <content>
                         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                      <children>
@@ -58,6 +61,122 @@
                         <Label layoutX="245.0" layoutY="52.0" text="Descripe your issue" />
                      </children></AnchorPane>
                      </content>
+                  </Tab>
+                  <Tab style="-fx-background-radius: 20;" text="View Profile">
+                      <content>
+                          <AnchorPane minHeight="0.0" minWidth="0.0">
+                              <children>
+                                  <VBox prefHeight="472.0" prefWidth="138.0">
+                                      <children>
+                                          <Label text="User Name">
+                                              <VBox.margin>
+                                                  <Insets left="20.0" top="25.0" />
+                                              </VBox.margin>
+                                          </Label>
+                                          <Label text="First Name">
+                                              <VBox.margin>
+                                                  <Insets left="20.0" top="25.0" />
+                                              </VBox.margin>
+                                          </Label>
+                                          <Label layoutX="10.0" layoutY="27.0" text="Last Name">
+                                              <VBox.margin>
+                                                  <Insets left="20.0" top="29.0" />
+                                              </VBox.margin>
+                                          </Label>
+                                          <Label layoutX="10.0" layoutY="44.0" text="E-mail">
+                                              <VBox.margin>
+                                                  <Insets left="20.0" top="29.0" />
+                                              </VBox.margin>
+                                          </Label>
+                                          <Label layoutX="10.0" layoutY="61.0" text="Phone Number">
+                                              <VBox.margin>
+                                                  <Insets left="20.0" top="27.0" />
+                                              </VBox.margin>
+                                          </Label>
+                                          <Label layoutX="10.0" layoutY="78.0" text="Role">
+                                              <VBox.margin>
+                                                  <Insets left="20.0" top="28.0" />
+                                              </VBox.margin>
+                                          </Label>
+                                          <Label text="New Password">
+                                              <VBox.margin>
+                                                  <Insets left="20.0" top="30.0" />
+                                              </VBox.margin>
+                                          </Label>
+                                          <Label text="Confirm Password">
+                                              <VBox.margin>
+                                                  <Insets left="20.0" top="30.0" />
+                                              </VBox.margin>
+                                          </Label>
+                                          <Label text="Created on">
+                                              <VBox.margin>
+                                                  <Insets left="20.0" top="30.0" />
+                                              </VBox.margin>
+                                          </Label>
+                                      </children>
+                                  </VBox>
+                                  <VBox layoutX="143.0" prefHeight="462.0" prefWidth="347.0">
+                                      <children>
+                                          <TextField fx:id="userNameTextField" disable="true" editable="false" style="-fx-background-radius: 20;">
+                                              <VBox.margin>
+                                                  <Insets top="20.0" />
+                                              </VBox.margin>
+                                          </TextField>
+                                          <TextField fx:id="firstNameTextField" disable="true" editable="false" style="-fx-background-radius: 20;">
+                                              <VBox.margin>
+                                                  <Insets top="20.0" />
+                                              </VBox.margin>
+                                          </TextField>
+                                          <TextField fx:id="lastNameTextField" disable="true" editable="false" style="-fx-background-radius: 20;">
+                                              <VBox.margin>
+                                                  <Insets top="20.0" />
+                                              </VBox.margin>
+                                          </TextField>
+                                          <TextField fx:id="emailTextField" disable="true" editable="false" style="-fx-background-radius: 20;">
+                                              <VBox.margin>
+                                                  <Insets top="20.0" />
+                                              </VBox.margin>
+                                          </TextField>
+                                          <TextField fx:id="phoneNbrTextField" disable="true" editable="false" style="-fx-background-radius: 20;">
+                                              <VBox.margin>
+                                                  <Insets top="20.0" />
+                                              </VBox.margin>
+                                          </TextField>
+                                          <TextField fx:id="roleTextField" disable="true" editable="false" style="-fx-background-radius: 20;">
+                                              <VBox.margin>
+                                                  <Insets top="20.0" />
+                                              </VBox.margin>
+                                          </TextField>
+                                          <PasswordField fx:id="newPasswordTextField" disable="true" editable="false" style="-fx-background-radius: 20;">
+                                              <VBox.margin>
+                                                  <Insets top="20.0" />
+                                              </VBox.margin>
+                                          </PasswordField>
+                                          <PasswordField fx:id="confirmPasswordTextField" disable="true" editable="false" style="-fx-background-radius: 20;">
+                                              <VBox.margin>
+                                                  <Insets top="20.0" />
+                                              </VBox.margin>
+                                          </PasswordField>
+                                          <TextField fx:id="createdDateTextField" disable="true" editable="false" style="-fx-background-radius: 20;">
+                                              <VBox.margin>
+                                                  <Insets top="20.0" />
+                                              </VBox.margin>
+                                          </TextField>
+                                          <Button fx:id="editButton" mnemonicParsing="false" prefWidth="80.0" style="-fx-background-radius: 20;" text="Edit">
+                                              <VBox.margin>
+                                                  <Insets left="280.0" top="5.0" />
+                                              </VBox.margin>
+                                          </Button>
+                                          <Button fx:id="saveButton" mnemonicParsing="false" prefWidth="80.0" style="-fx-background-radius: 20;" text="Save">
+                                              <VBox.margin>
+                                                  <Insets left="280.0" top="3.0" />
+                                              </VBox.margin>
+                                          </Button>
+                                      </children>
+                                  </VBox>
+                              </children>
+                          </AnchorPane>
+                      </content>
                   </Tab>
               </tabs>
             </TabPane>
