--- a/src/com/github/view/AdminLoginScrn.fxml
+++ b/src/com/github/view/AdminLoginScrn.fxml
@@ -8,6 +8,7 @@
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
 <AnchorPane id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" stylesheets="@../../../resources/style/login.css" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.github.controller.AdminController">
@@ -136,16 +137,16 @@
                                  <Insets top="20.0" />
                               </VBox.margin>
                            </TextField>
-                           <Button fx:id="editButton" mnemonicParsing="false" onAction="#handleEditButtonPressed" prefWidth="80.0" style="-fx-background-radius: 20;" text="Edit">
-                              <VBox.margin>
-                                 <Insets left="280.0" top="5.0" />
-                              </VBox.margin>
-                           </Button>
-                           <Button fx:id="saveButton" onAction="#handleSaveButtonPressed" disable="true" mnemonicParsing="false" prefWidth="80.0" style="-fx-background-radius: 20;" text="Save">
-                              <VBox.margin>
-                                 <Insets left="280.0" top="3.0" />
-                              </VBox.margin>
-                           </Button>
+                           <HBox alignment="CENTER" layoutY="20.0">
+                              <children>
+                                 <Button fx:id="editButton" mnemonicParsing="false" onAction="#handleEditButtonPressed" prefWidth="80.0" style="-fx-background-radius: 20;" text="Edit" />
+                                 <Button fx:id="saveButton" disable="true" mnemonicParsing="false" onAction="#handleSaveButtonPressed" prefWidth="80.0" style="-fx-background-radius: 20;" text="Save" />
+                                 <Button fx:id="print" mnemonicParsing="false" onAction="#handlePrintButtonPressed" prefWidth="80.0" style="-fx-background-radius: 20;" text="Print" />
+                              </children>
+                              <padding>
+                                 <Insets top="10.0" />
+                              </padding>
+                           </HBox>
                         </children>
                      </VBox>
                   </children>
