--- a/src/com/github/view/BusDriver.fxml
+++ b/src/com/github/view/BusDriver.fxml
@@ -30,122 +30,7 @@
                   </children></AnchorPane>
                 </content>
             </Tab>
-            <Tab style="-fx-background-radius: 20;" text="View Profile">
-                <content>
-                    <AnchorPane minHeight="0.0" minWidth="0.0">
-                        <children>
-                            <VBox prefHeight="472.0" prefWidth="138.0">
-                                <children>
-                                    <Label text="User Name">
-                                        <VBox.margin>
-                                            <Insets left="20.0" top="25.0" />
-                                        </VBox.margin>
-                                    </Label>
-                                    <Label text="First Name">
-                                        <VBox.margin>
-                                            <Insets left="20.0" top="25.0" />
-                                        </VBox.margin>
-                                    </Label>
-                                    <Label layoutX="10.0" layoutY="27.0" text="Last Name">
-                                        <VBox.margin>
-                                            <Insets left="20.0" top="29.0" />
-                                        </VBox.margin>
-                                    </Label>
-                                    <Label layoutX="10.0" layoutY="44.0" text="E-mail">
-                                        <VBox.margin>
-                                            <Insets left="20.0" top="29.0" />
-                                        </VBox.margin>
-                                    </Label>
-                                    <Label layoutX="10.0" layoutY="61.0" text="Phone Number">
-                                        <VBox.margin>
-                                            <Insets left="20.0" top="27.0" />
-                                        </VBox.margin>
-                                    </Label>
-                                    <Label layoutX="10.0" layoutY="78.0" text="Role">
-                                        <VBox.margin>
-                                            <Insets left="20.0" top="28.0" />
-                                        </VBox.margin>
-                                    </Label>
-                                    <Label text="New Password">
-                                        <VBox.margin>
-                                            <Insets left="20.0" top="30.0" />
-                                        </VBox.margin>
-                                    </Label>
-                                    <Label text="Confirm Password">
-                                        <VBox.margin>
-                                            <Insets left="20.0" top="30.0" />
-                                        </VBox.margin>
-                                    </Label>
-                                    <Label text="Created on">
-                                        <VBox.margin>
-                                            <Insets left="20.0" top="30.0" />
-                                        </VBox.margin>
-                                    </Label>
-                                </children>
-                            </VBox>
-                            <VBox layoutX="143.0" prefHeight="462.0" prefWidth="347.0">
-                                <children>
-                                    <TextField fx:id="userNameTextField" disable="true" editable="false" style="-fx-background-radius: 20;">
-                                        <VBox.margin>
-                                            <Insets top="20.0" />
-                                        </VBox.margin>
-                                    </TextField>
-                                    <TextField fx:id="firstNameTextField" disable="true" editable="false" style="-fx-background-radius: 20;">
-                                        <VBox.margin>
-                                            <Insets top="20.0" />
-                                        </VBox.margin>
-                                    </TextField>
-                                    <TextField fx:id="lastNameTextField" disable="true" editable="false" style="-fx-background-radius: 20;">
-                                        <VBox.margin>
-                                            <Insets top="20.0" />
-                                        </VBox.margin>
-                                    </TextField>
-                                    <TextField fx:id="emailTextField" disable="true" editable="false" style="-fx-background-radius: 20;">
-                                        <VBox.margin>
-                                            <Insets top="20.0" />
-                                        </VBox.margin>
-                                    </TextField>
-                                    <TextField fx:id="phoneNbrTextField" disable="true" editable="false" style="-fx-background-radius: 20;">
-                                        <VBox.margin>
-                                            <Insets top="20.0" />
-                                        </VBox.margin>
-                                    </TextField>
-                                    <TextField fx:id="roleTextField" disable="true" editable="false" style="-fx-background-radius: 20;">
-                                        <VBox.margin>
-                                            <Insets top="20.0" />
-                                        </VBox.margin>
-                                    </TextField>
-                                    <PasswordField fx:id="newPasswordTextField" disable="true" editable="false" style="-fx-background-radius: 20;">
-                                        <VBox.margin>
-                                            <Insets top="20.0" />
-                                        </VBox.margin>
-                                    </PasswordField>
-                                    <PasswordField fx:id="confirmPasswordTextField" disable="true" editable="false" style="-fx-background-radius: 20;">
-                                        <VBox.margin>
-                                            <Insets top="20.0" />
-                                        </VBox.margin>
-                                    </PasswordField>
-                                    <TextField fx:id="createdDateTextField" disable="true" editable="false" style="-fx-background-radius: 20;">
-                                        <VBox.margin>
-                                            <Insets top="20.0" />
-                                        </VBox.margin>
-                                    </TextField>
-                                    <Button fx:id="editButton" mnemonicParsing="false" prefWidth="80.0" style="-fx-background-radius: 20;" text="Edit">
-                                        <VBox.margin>
-                                            <Insets left="280.0" top="5.0" />
-                                        </VBox.margin>
-                                    </Button>
-                                    <Button fx:id="saveButton" mnemonicParsing="false" prefWidth="80.0" style="-fx-background-radius: 20;" text="Save">
-                                        <VBox.margin>
-                                            <Insets left="280.0" top="3.0" />
-                                        </VBox.margin>
-                                    </Button>
-                                </children>
-                            </VBox>
-                        </children>
-                    </AnchorPane>
-                </content>
-            </Tab>
+            <fx:include source="viewProfile.fxml"></fx:include>
         </tabs>
     </TabPane>
     <Button id="exitLoginButton" fx:id="signoutButton" layoutX="522.0" layoutY="1.5" mnemonicParsing="false" prefHeight="24.0" prefWidth="24.0" />
